# search-engine

./: .gitignore  CMakeLists.txt  README  config.json  main.cpp  requests.json  search_engine.cpp  test.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  ThreadPool.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  ThreadPool.cpp  main.cpp  test.cpp
